// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render FormAccessRights correctly 1`] = `
<form>
  <div
    className="form-group"
  >
    <withStateHandlers(Helptext)
      term="Dataset_accessRights"
      title="Tilgangsnivå"
    />
    <Field
      component={[Function]}
      label="Offentlig"
      name="accessRights.uri"
      onChange={[Function]}
      radioId="accessRight-public"
      type="radio"
      value="http://publications.europa.eu/resource/authority/access-right/PUBLIC"
    />
    <Field
      component={[Function]}
      label="Begrenset offentlighet"
      name="accessRights.uri"
      radioId="accessRight-restricted"
      type="radio"
      value="http://publications.europa.eu/resource/authority/access-right/RESTRICTED"
    />
    <Field
      component={[Function]}
      label="Unntatt offentlighet"
      name="accessRights.uri"
      radioId="accessRight-non_public"
      type="radio"
      value="http://publications.europa.eu/resource/authority/access-right/NON_PUBLIC"
    />
  </div>
</form>
`;

exports[`should render FormAccessRights correctly with syncErrors 1`] = `
<form>
  <div
    className="form-group"
  >
    <withStateHandlers(Helptext)
      term="Dataset_accessRights"
      title="Tilgangsnivå"
    />
    <Field
      component={[Function]}
      label="Offentlig"
      name="accessRights.uri"
      onChange={[Function]}
      radioId="accessRight-public"
      type="radio"
      value="http://publications.europa.eu/resource/authority/access-right/PUBLIC"
    />
    <Field
      component={[Function]}
      label="Begrenset offentlighet"
      name="accessRights.uri"
      radioId="accessRight-restricted"
      type="radio"
      value="http://publications.europa.eu/resource/authority/access-right/RESTRICTED"
    />
    <Field
      component={[Function]}
      label="Unntatt offentlighet"
      name="accessRights.uri"
      radioId="accessRight-non_public"
      type="radio"
      value="http://publications.europa.eu/resource/authority/access-right/NON_PUBLIC"
    />
    <div
      className="alert alert-danger mt-3"
    >
      Feil
    </div>
    <div
      className="mt-4"
    >
      <div
        className="form-group"
      >
        <withStateHandlers(Helptext)
          term="Dataset_legalBasisForRestriction"
          title="Skjermingshjemmel"
        />
        <FieldArray
          component={[Function]}
          isReadOnly={false}
          languages={Array []}
          linkLabel="Lenke"
          name="legalBasisForRestriction"
          onDeleteFieldAtIndex={[Function]}
          titleLabel="Tittel"
        />
      </div>
      <div
        className="form-group"
      >
        <withStateHandlers(Helptext)
          term="Dataset_legalBasisForProcessing"
          title="Behandlingsgrunnlag"
        />
        <FieldArray
          component={[Function]}
          isReadOnly={false}
          languages={Array []}
          linkLabel="Lenke"
          name="legalBasisForProcessing"
          onDeleteFieldAtIndex={[Function]}
          titleLabel="Tittel"
        />
      </div>
      <div
        className="form-group"
      >
        <withStateHandlers(Helptext)
          term="Dataset_legalBasisForAccess"
          title="Utleveringshjemmel"
        />
        <FieldArray
          component={[Function]}
          isReadOnly={false}
          languages={Array []}
          linkLabel="Lenke"
          name="legalBasisForAccess"
          onDeleteFieldAtIndex={[Function]}
          titleLabel="Tittel"
        />
      </div>
    </div>
  </div>
</form>
`;

exports[`should render renderLegalBasis correctly 1`] = `
<div>
  <div
    className="d-flex flex-column mb-2"
    key="0"
  >
    <MultilingualField
      component={[Function]}
      label={null}
      languages={Array []}
      name="[object Object].prefLabel"
      showLabel={true}
    />
    <div
      className="mt-2"
    >
      <Field
        component={[Function]}
        name="[object Object].uri"
        showLabel={true}
      />
    </div>
    <div
      className="d-flex align-items-end"
    >
      <button
        className="fdk-btn-no-border"
        onClick={[Function]}
        title="Remove legal basis"
        type="button"
      >
        <i
          className="fa fa-trash mr-2"
        />
      </button>
    </div>
  </div>
  <button
    className="fdk-btn-no-border"
    onClick={[Function]}
    type="button"
  >
    <i
      className="fa fa-plus mr-2"
    />
    Legg til
  </button>
</div>
`;
